tests/throw/throw.exp
Error ------------------------------------------------------------------------------------------------ expression.js:4:5

Cannot cast `a` to string because number [1] is incompatible with string [2].

   expression.js:4:5
   4|   ;(a: string) // error
          ^

References:
   expression.js:3:15
   3| function x(a: number = throw 'x') {
                    ^^^^^^ [1]
   expression.js:4:8
   4|   ;(a: string) // error
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:13:12

Cannot perform arithmetic operation because string [1] is not a number.

   test.js:13:12
   13|     return a*1; // a is not null
                  ^

References:
   test.js:9:16
    9| function g(a: ?string) {
                      ^^^^^^ [1]



Found 2 errors
